--- a/semjournals-web/src/main/webapp/index.html
+++ b/semjournals-web/src/main/webapp/index.html
@@ -9,17 +9,17 @@
         <meta name="viewport" content="initial-scale=1" />
 
         <!-- STYLESHEETS -->
-        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.css"/>
+        <link rel="stylesheet" href="app-content/angular-material.css"/>
         <link rel="stylesheet" href="app-content/app.css"/>
 
         <!-- SCRIPTS -->
-        <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.js"></script>
+        <script src="app-content/jquery-2.2.0.min.js"></script>
+        <script src="app-content/angular.min.js"></script>
+        <script src="app-content/angular-animate.min.js"></script>
+        <script src="app-content/angular-aria.min.js"></script>
+        <script src="app-content/angular-route.min.js"></script>
+        <script src="app-content/angular-cookies.min.js"></script>
+        <script src="app-content/angular-material.min.js"></script>
 
         <!-- MY SCRIPTS -->
         <script src="app.js"></script>
